Rewrite technical report for RosettaRemoteDebugBridge (post-rename, post-fix state)